[package]
name = "mini-dsp-mic"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
futures-util = "0.3.31"
warp = "0.3"
warp-embed = "0.5"
rust-embed = "8"
open = "5.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
log = "0.4"
log4rs = "1.3.0"
chrono = "0.4.38"
strum = "0.26.3"
strum_macros = "0.26.4"
rusqlite = { version = "0.32.1", features = ["bundled-sqlcipher-vendored-openssl"] }
reqwest = { version = "0.12.9", features = ["json"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
local-ip-address = "0.6.3"
tokio-serial = "5.4.5"
serialport = "4.6.1"
cpal = "0.15.3"
anyhow = "1.0.97"
ringbuf = "0.4.8"
